fix overflow on anchored cta

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/_anchored-cta-block.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/_anchored-cta-block.scss
@@ -3,6 +3,8 @@
   color: $white;
   margin: 4em 0 3.5em;
   position: relative;
+  width: 100%;
+  overflow: hidden;
   
   @include breakpoint($bp3) {
     background: linear-gradient(to right, $primary-dark, $primary-dark 30%, transparent 30%, transparent);
